[project]
name = "LED-Matrix"
dynamic = [ "version" ]
description = "APA102 based LED-Matrix controlled by Raspberry Pi on Alpine Linux written in Python."
authors = [
    { name = "mammo0", email = "marc.ammon@hotmail.de" }
]
readme = "README.md"
license = "GPL-3.0-only"

requires-python = ">=3.12,<4.0"

dependencies = [
    "spidev (>=3.8,<4.0) ; sys_platform == 'linux'",
    "imageio (>=2.37.0,<3.0.0)",
    "freetype-py @ git+https://github.com/mammo0/freetype-py.git@led-matrix",
    "simple-plugin-loader (>=3.0.0,<4.0.0)",
]


[project.urls]
homepage = "https://github.com/mammo0/LED-Matrix"

[project.scripts]
create-config = "led_matrix.config:create_initial_config"
led-matrix = "led_matrix.cli:run"


[tool.poetry]
include = [
    { path = "led_matrix/static_res", format = ["sdist", "wheel"] }
]
version = "0.0.0"

[tool.poetry.group.alpine.dependencies]
numpy = "=2.3.5"
pillow = "=11.3.0"
bottle = "=0.12.25"
apscheduler = "=3.10.4"
tzlocal = "=5.3.1"

[tool.poetry.group.config.dependencies]
tzlocal = "=5.3.1"
python-ini = "^1.1.0"
jsons = "^1.6.3"
astral = "^3.2"

[tool.poetry.group.dev.dependencies]
pygame = "^2.6.1"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base) }}
    {%- else -%}
        {{ serialize_pep440(base, post=distance) }}
    {%- endif -%}
"""
metadata = false


[tool.pylint.MAIN]
extension-pkg-allow-list = [
    "spidev",
    "pygame"
]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
